...
fun SignUpScreen(navController: NavController, vm: SignUpVM = hiltViewModel()) {
    val state = vm.state.value
    val tfList = listOf(
        TextFields(
            state.name,
            { vm.onEvent(SignUpEvent.EnteredName(it)) },
            testTag = "UserName",
            placeholder = stringResource(R.string.UserName),
            leadingIcon = R.drawable.profile_icon,
            trailingIcon = false,
            passwordTransformation = false,
            passwordVisible = {},
            padding = 57,
        ),
        TextFields(
            state.phone,
            { vm.onEvent(SignUpEvent.EnteredPhone(it)) },
            testTag = "Mobile Phone Number",
            placeholder = stringResource(R.string.MobilePhoneNumber),
            leadingIcon = R.drawable.smartphone_icon,
            trailingIcon = false,
            passwordTransformation = false,
            passwordVisible = {},
            padding = 36,
        ),
        TextFields(
            state.emailAddress,
            { vm.onEvent(SignUpEvent.EnteredEmailAddress(it)) },
            testTag = "Email Address",
            placeholder = stringResource(R.string.email_address),
            leadingIcon = R.drawable.email_icon,
            trailingIcon = false,
            passwordTransformation = false,
            passwordVisible = {},
            padding = 36,
        ),
        TextFields(
            state.password,
            { vm.onEvent(SignUpEvent.EnteredPassword(it)) },
            testTag = "Password",
            placeholder = stringResource(R.string.password_placeholder),
            leadingIcon = R.drawable.password_icon,
            trailingIcon = true,
            passwordTransformation = state.passwordVisible,
            passwordVisible = {vm.onEvent(SignUpEvent.PasswordVisible)},
            padding = 36,
...
                    },
                    modifier = Modifier
                        .padding(top = 13.dp)
                        .align(Alignment.End)
                        .clip(CircleShape)
                        .size(64.dp)
                        .testTag("signUpButton"),
                    colors = ButtonDefaults.buttonColors(
                        containerColor = colorResource(R.color.activeColor),
                        disabledContainerColor = colorResource(R.color.MainColor)
                    ),
                    contentPadding = PaddingValues(16.dp)
                ) {
...
